--- a/shaoxiawjc/Shop-Project/ShopCRUD/pom.xml
+++ b/shaoxiawjc/Shop-Project/ShopCRUD/pom.xml
@@ -5,24 +5,31 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.wjc</groupId>
-        <artifactId>shop</artifactId>
+        <artifactId>Shop-Project</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Tests</artifactId>
+    <artifactId>ShopCRUD</artifactId>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.wjc</groupId>
-            <artifactId>Tools</artifactId>
+            <artifactId>ShopException</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+
     </dependencies>
+
 
 </project>
