--- a/shaoxiawjc/Shop-Project/pom.xml
+++ b/shaoxiawjc/Shop-Project/pom.xml
@@ -3,13 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.wjc</groupId>
-        <artifactId>shop</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
-    <artifactId>Tools</artifactId>
+    <groupId>com.wjc</groupId>
+    <artifactId>Shop-Project</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>ShopCRUD</module>
+        <module>ShopException</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
