--- a/shaoxiawjc/ShopManger/OrderAndProduct/pom.xml
+++ b/shaoxiawjc/ShopManger/OrderAndProduct/pom.xml
@@ -17,6 +17,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
 
+                <directory>src/main/java</directory>
+                <includes>
+
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
 
 </project>
